--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javascript Practice!</title>
+    <title>Rock Paper Scissors Game</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="main-head">
-        <h1>Rock Paper Seassor Game</h1>
+        <h1>Rock Paper Scissors Game</h1>
     </div>
     <div class="options-div">
         <div class="options" id="rock">
